@@ -79,6 +79,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * (bug 11308) Allow the API to output the image metadata
 * (bug 11296) Temporary fix for escaping of ampersands inside links in pretty-printed
   help document.
+* (bug 11405) Expand templates implementation in the API
 
 === Languages updated in 1.12 ===
 
